# hauser

./: .dockerignore  .gitignore  .goreleaser.yml  .travis.yml  Dockerfile  Makefile  README.md  Redshift.md  build.sh  c8-config.toml  config.toml  deploy.yaml  example-config.toml  go.mod  go.sum  gorepomanifest.json  main.go  main_test.go  pre-commit.sh
.circleci/: config.yml
.github/workflows/: codeql-analysis.yml
client/: client.go  export.go  export_v2.go  operations.go  transport.go
config/: config.go  config_test.go
core/: core.go  main.go  main_test.go
deploy/: README.md
deploy/base/: hauser.yaml  kustomization.yaml
deploy/example/: .env  example-config.toml  kustomization.yaml
hauser/: resources.go
internal/: service.go  service_test.go
pipeline/: exports.go  exports_test.go  pipeline.go
recipes/GKE Setup/: README.md  create-svc-account.sh  deploy.sh  hauser.yaml
recipes/multi-hauser/: Dockerfile  README.md  hauser-config.toml.tmpl  start.sh  supervisor-program.conf.tmpl  supervisord.conf.tmpl
releasing/: README.md  do-release.sh
resources/: resources.go
server-conf/: config.toml.tmpl  entry.sh
src/github.com/fullstorydev/gorepoman/: README.md  manifest.go
testing/: BUILD.bazel  mockclient.go  mockdatabase.go  mockstorage.go  mockwarehouse.go
testing/testdata/: raw.json  testdata.json
testing/testdata/default/: 1598400000.csv  1598486400.csv  159848640048.csv  1598572800.csv  159857280048.csv  1598659200.csv  159865920048.csv  1598745600.csv  159874560048.csv
testing/testdata/existing/: 1598400000.csv  1598486400.csv  1598572800.csv  1598659200.csv  1598745600.csv
testing/testdata/groupByDay/: 1598400000.csv  1598486400.csv  159848640048-20200827.csv  1598572800.csv  159857280048-20200828.csv  1598659200.csv  159865920048-20200829.csv  1598745600.csv  159874560048-20200830.csv
testing/testdata/json/: 1598486400.json  159848640048.json  1598572800.json  159857280048.json  1598659200.json  159865920048.json  1598745600.json  159874560048.json
testing/testutils/: BUILD.bazel  testutils.go
warehouse/: BUILD.bazel  bigquery.go  bigquery_test.go  gcs.go  localdisk.go  redshift.go  redshift_test.go  s3.go  s3_test.go  schema.go  schema_test.go  snowflake.go  sqldb.go  warehouse.go
(+5 files in other folders)
