load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testing",
    srcs = [
        "mockclient.go",
        "mockdatabase.go",
        "mockstorage.go",
    ],
    importpath = "hauser/testing",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_fullstorydev_hauser//client",
        "@com_github_fullstorydev_hauser//warehouse",
    ],
)

alias(
    name = "go_default_library",
    actual = ":testing",
    visibility = ["//visibility:public"],
)
