load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "testutils",
    srcs = ["testutils.go"],
    importpath = "hauser/testing/testutils",
    visibility = ["//visibility:public"],
)

alias(
    name = "go_default_library",
    actual = ":testutils",
    visibility = ["//visibility:public"],
)
